--- a/notebook_sample.ipynb
+++ b/notebook_sample.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "NdV1dAWBY3tL"
+      },
       "source": [
         "# **Feature Selection Task: Instructions**\n",
         "\n",
@@ -48,7 +37,7 @@
         "### **Step 2: Select Features**\n",
         "2. Decide on a list of features you think are important:\n",
         "   - **Example**: Start with 8, 10, or 20 features.\n",
-        "   - Select features based on any method you prefer (e.g., domain knowledge, correlation, feature importance from models like Random Forest, etc.).\n",
+        "   - Select features based on any method you prefer (e.g., correlation, feature importance from models like Random Forest, etc.).\n",
         "\n",
         "### **Step 3: Train a Model**\n",
         "3. Train a model using your chosen features:\n",
@@ -75,41 +64,39 @@
         "- Document your process clearly:\n",
         "  - List the selected features.\n",
         "  - Show the AUC scores before and after feature refinement.\n",
-        "  - Explain why specific features were kept or removed.\n",
-        "\n",
         "---\n",
         "\n",
         "## **6. Deliverables**\n",
         "By the end of the task, you should submit:\n",
         "1. A final AUC score on the **test set**.\n",
         "2. A list of selected features.\n",
-        "3. A brief explanation of your process and decisions.\n",
-        "\n",
         "---\n",
         "\n",
         "### **Notes**\n",
         "- The dataset contains **X features** and **Y target**.\n",
         "- Aim for an initial selection of **8-10 features**, but you can experiment with more or fewer as you refine the list."
-      ],
-      "metadata": {
-        "id": "NdV1dAWBY3tL"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "Y2WG8TNvexDu"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "from typing import List, Tuple, Dict"
-      ],
-      "metadata": {
-        "id": "Y2WG8TNvexDu"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "zT7UAAmGXyX-"
+      },
+      "outputs": [],
       "source": [
         "def load_and_prepare_data(data: pd.DataFrame) -> Tuple[pd.DataFrame, pd.Series]:\n",
         "    \"\"\"\n",
@@ -127,15 +114,15 @@
         "    \"\"\"\n",
         "    # YOUR CODE HERE\n",
         "    pass\n"
-      ],
-      "metadata": {
-        "id": "zT7UAAmGXyX-"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Chs1CAB0X2ri"
+      },
+      "outputs": [],
       "source": [
         "def split_dataset(X: pd.DataFrame, y: pd.Series) -> Tuple[pd.DataFrame, pd.DataFrame, pd.Series, pd.Series]:\n",
         "    \"\"\"\n",
@@ -150,15 +137,15 @@
         "    \"\"\"\n",
         "    # YOUR CODE HERE\n",
         "    pass"
-      ],
-      "metadata": {
-        "id": "Chs1CAB0X2ri"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Z03djyaxX7Ap"
+      },
+      "outputs": [],
       "source": [
         "def select_features(X_train: pd.DataFrame, y_train: pd.Series, n_features: int) -> List[str]:\n",
         "    \"\"\"\n",
@@ -178,15 +165,15 @@
         "    \"\"\"\n",
         "    # YOUR CODE HERE\n",
         "    pass"
-      ],
-      "metadata": {
-        "id": "Z03djyaxX7Ap"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "BjaGT7vkYBED"
+      },
+      "outputs": [],
       "source": [
         "def train_and_evaluate(X_train: pd.DataFrame,\n",
         "                      X_test: pd.DataFrame,\n",
@@ -212,15 +199,15 @@
         "    \"\"\"\n",
         "    # YOUR CODE HERE\n",
         "    pass"
-      ],
-      "metadata": {
-        "id": "BjaGT7vkYBED"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "n0ZlwyH6YEdy"
+      },
+      "outputs": [],
       "source": [
         "def feature_selection_pipeline(data: pd.DataFrame, n_features: int) -> Tuple[List[str], float]:\n",
         "    \"\"\"\n",
@@ -241,25 +228,34 @@
         "    \"\"\"\n",
         "    # YOUR CODE HERE\n",
         "    return selected_features, auc_score"
-      ],
-      "metadata": {
-        "id": "n0ZlwyH6YEdy"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "lLA0aILfZoVr"
+      },
+      "outputs": [],
       "source": [
         "def submit(selected_features: List[str]):\n",
         "  with open('submission.csv', 'w') as f:\n",
         "    f.write(f\"Selected Features: {selected_features}\\n\")"
-      ],
-      "metadata": {
-        "id": "lLA0aILfZoVr"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
